style: fix landing page text alignment

--- a/src/pages/Landing/landing.module.scss
+++ b/src/pages/Landing/landing.module.scss
@@ -35,6 +35,7 @@
   h1 {
     font-weight: 200;
     margin-bottom: 2rem;
+    text-align: center;
   }
 
   p {
